--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
     <style>
         * {
             margin: 10px;
-            padding: 0;
+            padding: 20px;
         }
         .header {
             border: 5px solid black;
-            padding: 20px;
             background-color: lightcyan;
             text-align: center;
             font-size: xx-large;
         }
         .mainBody {
-            padding: 20px;
             background-color: lightgrey;
             text-align: center;
         }
@@ -34,7 +32,7 @@
         Web Programming I, Spring 2024</p>
     </div>
     <div class="mainBody">
-        http://dubersj.github.io/web-project-1
+        <a href="https://dubersj.github.io/web-project-1">https://dubersj.github.io/web-project-1</a>
     </div>
 </body>
 
