--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="mainBody">
         <p>This has been a message from Steve J Duber IV<br/>
-        In accordance with the instructions of Project 1.<br/>
+        In accordance with the instructions of Project 1,<br/>
         Web Programming I, Spring 2024</p>
     </div>
     <div class="mainBody">
