--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         hello, world!
     </div>
     <div class="mainBody">
-        <p>This has been a message from Steve J Duber IV<br/>
+        <p>This has been a message from Steve J Duber IV,<br/>
         In accordance with the instructions of Project 1,<br/>
         Web Programming I, Spring 2024</p>
     </div>
