--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         hello, world!
     </div>
     <div class="mainBody">
-        <p>This has been a message from Steve J Duber IV,<br/>
-        In accordance with the instructions of Project 1,<br/>
-        Web Programming I, Spring 2024</p>
+        This has been a message from Steve J Duber IV<br/>
+        in accordance with the instructions of Project 1.<br/>
+        Web Programming I, Spring 2024
     </div>
     <div class="mainBody">
         <a href="https://dubersj.github.io/web-project-1">https://dubersj.github.io/web-project-1</a>
