--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             margin: 10px;
             padding: 20px;
         }
+        br {
+            margin: 0;
+            padding: 0;
+        }
         .header {
             border: 5px solid black;
             background-color: lightcyan;
